# Robotics

./: output.txt
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/prx_simulation/: bomberman_info_msg.h  control_msg.h  graph_msg.h  interval_msg.h  lqr_msg.h  manipulation_acknowledgement.h  plan_msg.h  plant_locations_msg.h  query_msg.h  request_ground_truth_srv.h  request_ground_truth_srvRequest.h  request_ground_truth_srvResponse.h  request_space_information_srv.h  request_space_information_srvRequest.h  request_space_information_srvResponse.h  send_lqr_srv.h  send_lqr_srvRequest.h  send_lqr_srvResponse.h  send_plans_srv.h  send_plans_srvRequest.h  send_plans_srvResponse.h  set_sim_state_srv.h  set_sim_state_srvRequest.h  set_sim_state_srvResponse.h  state_msg.h  world_config_msg.h
devel/include/prx_utilities/: Vec4_msg.h  add_HUD_element_srv.h  add_HUD_element_srvRequest.h  add_HUD_element_srvResponse.h  add_twoD_text_srv.h  add_twoD_text_srvRequest.h  add_twoD_text_srvResponse.h  create_HUD_srv.h  create_HUD_srvRequest.h  create_HUD_srvResponse.h  describe_geometries_srv.h  describe_geometries_srvRequest.h  describe_geometries_srvResponse.h  listen_srv.h  listen_srvRequest.h  listen_srvResponse.h  planning_query_msg.h  query_planner_srv.h  query_planner_srvRequest.h  query_planner_srvResponse.h  remove_plant_srv.h  remove_plant_srvRequest.h  remove_plant_srvResponse.h  rigid_body_info_msg.h  scene_text_msg.h  send_plants_srv.h  send_plants_srvRequest.h  send_plants_srvResponse.h  shutdown_node_srv.h  shutdown_node_srvRequest.h  shutdown_node_srvResponse.h  space_msg.h  take_screenshot_srv.h  take_screenshot_srvRequest.h  take_screenshot_srvResponse.h  update_info_geoms_srv.h  update_info_geoms_srvRequest.h  update_info_geoms_srvResponse.h  update_twoD_text_srv.h  update_twoD_text_srvRequest.h  (+10 more)
devel/lib/groot/: groot_node
devel/lib/hodor/: hodor_node
devel/lib/pkgconfig/: groot.pc  hodor.pc  prx_simulation.pc  prx_utilities.pc  prx_visualization.pc
devel/lib/prx_simulation/: prx_ik_stats  prx_simulation
devel/lib/prx_utilities/: prx_utilities_demo
devel/lib/prx_visualization/: prx_visualization
devel/share/groot/cmake/: grootConfig.cmake
devel/share/hodor/cmake/: hodorConfig.cmake
devel/share/prx_simulation/cmake/: prx_simulation-msg-paths.cmake  prx_simulationConfig.cmake
devel/share/prx_utilities/cmake/: prx_utilities-msg-extras.cmake  prx_utilities-msg-paths.cmake  prx_utilitiesConfig.cmake
devel/share/prx_visualization/cmake/: prx_visualizationConfig.cmake
pracsys_models/.hg/: dirstate  hgrc  undo.desc
pracsys_models/.hg/cache/: branchheads-served
pracsys_models/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
pracsys_models/.hg/store/data/meshes/: __auto__1.jpg.d  __auto__1.jpg.i  duster__small.3ds.i  kiva__pod.osg.d  kiva__pod.osg.i  kiva__pod.stl.d  kiva__pod.stl.i  kiva__pod2.osg.i  kiva__pod2.stl.i
pracsys_models/meshes/base/: pedestal_link_collision.osg
pracsys_models/meshes/head/: H1__.3ds  prx_screen__.dae
pracsys_models/meshes/lower_elbow/: E1.osg
pracsys_models/meshes/lower_forearm/: W1.osg
pracsys_models/meshes/lower_shoulder/: S1.osg
pracsys_models/meshes/torso/: base_link_collision.osg  prx.3ds
pracsys_models/meshes/upper_elbow/: E0.osg
pracsys_models/meshes/wrist/: W2.osg
src/: prx_doc_light
src/.hg/: dirstate  hgrc  undo.desc
src/.hg/cache/: branchheads-served
src/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
src/.hg/store/data/: prx__doc__light.i  rosdep.yaml.i  stack.xml.i
src/prx_build/: catkin_compile_packages.py  compile_packages.py  packages.config
src/prx_build/.BuildFiles/: CMakeListsPlanning.txt  CMakeListsSimulation.txt  CMakeListsUtilities.txt  CMakeListsVisualization.txt  planning_plugin.xml  simulation_plugin.xml  utilities_plugin.xml
src/prx_build/.CatkinBuildFiles/plan/: CMakeLists.txt  temppackage.xml
src/prx_build/.CatkinBuildFiles/sim/: CMakeLists.txt
src/prx_build/.CatkinBuildFiles/util/: CMakeLists.txt
src/prx_external/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/prx_external/Wavelet_release/: lift.h  lift_impl.h  wemd.h  wemd_impl.h
src/prx_external/extras/blitz-0.9/: CONFIG_COMMAND
src/prx_external/extras/blitz-0.9/blitz/gnu/: bzconfig.h
src/prx_external/extras/blitz-0.9/doc/: Makefile
src/prx_external/extras/blitz-0.9/doc/doxygen/: Doxyfile  Makefile
src/prx_external/extras/blitz-0.9/doc/examples/: Makefile
src/prx_external/extras/blitz-0.9/doc/stencils/: Makefile
src/prx_external/extras/blitz-0.9/lib/: Makefile
src/prx_input/: StripMall_semantics.yaml
src/prx_input/experiments/baxter/: main_example.launch  main_example_simple.launch
src/prx_input/experiments/bullet/: tens_planning.launch
src/prx_input/navigation_graphs/: StripMall.txt  simple_diamond_nav_graph.txt
src/prx_input/templates/plants/: second_order_car.yaml
src/prx_input/templates/simulators/: default_simulator.yaml  uncertain_bullet_simulator.yaml
src/prx_input/templates/spaces/: space_types.yaml
src/prx_packages/manipulation/input/: shelf.yaml
src/prx_packages/manipulation/planning/: manipulation_world_model.cpp  manipulation_world_model.hpp  plugin.xml
src/prx_packages/manipulation/simulation/: plugin.xml
src/prx_packages/manipulation/utilities/: plugin.xml
src/prx_planning/: CMakeLists.txt  planning_plugin.xml
src/prx_planning/action/: apc_query.action
src/prx_planning/prx/: main.cpp
src/prx_planning/prx/planning/: planner.cpp  planner.hpp  world_model.cpp  world_model.hpp
src/prx_planning/scripts/: test_apc_queries.py
src/prx_roadmaps/: baxter[10000].database  left_arm_graph.roadmap  right_arm_graph.roadmap
src/prx_simulation/: CMakeLists.txt  package.xml  simulation_plugin.xml
src/prx_simulation/prx/: IK_fast_main.cpp
src/prx_simulation/prx/simulation/: plan.cpp  plan.hpp  trajectory.cpp  trajectory.hpp
src/prx_utilities/: CMakeLists.txt  utilities_plugin.xml
src/prx_utilities/prx/: demo.launch  main.cpp  param_dump.cpp
src/prx_visualization/: CMakeLists.txt
(+1869 files in other folders)
